Upgrade to SpringBoot 3.2