@@ -854,7 +854,7 @@ public class Base64 {
 
     if( off + len > source.length  ){
       throw new IllegalArgumentException(
-        String.format( "Cannot have offset of %d and length of %d with array of length %d", off,len,source.length));
+           "Cannot have offset of %d and length of %d with array of length %d".formatted(off, len, source.length));
     }   // end if: off < 0
 
     // Compress?
@@ -987,12 +987,12 @@ public class Base64 {
       throw new NullPointerException( "Destination array was null." );
     }   // end if
     if( srcOffset < 0 || srcOffset + 3 >= source.length ){
-      throw new IllegalArgumentException( String.format(
-        "Source array with length %d cannot have offset of %d and still process four bytes.", source.length, srcOffset ) );
+      throw new IllegalArgumentException( 
+          "Source array with length %d cannot have offset of %d and still process four bytes.".formatted(source.length, srcOffset) );
     }   // end if
     if( destOffset < 0 || destOffset +2 >= destination.length ){
-      throw new IllegalArgumentException( String.format(
-        "Destination array with length %d cannot have offset of %d and still store three bytes.", destination.length, destOffset ) );
+      throw new IllegalArgumentException( 
+          "Destination array with length %d cannot have offset of %d and still store three bytes.".formatted(destination.length, destOffset) );
     }   // end if
 
 
@@ -1095,8 +1095,8 @@ public class Base64 {
       throw new NullPointerException( "Cannot decode null source array." );
     }   // end if
     if( off < 0 || off + len > source.length ){
-      throw new IllegalArgumentException( String.format(
-        "Source array with length %d cannot have offset of %d and process %d bytes.", source.length, off, len ) );
+      throw new IllegalArgumentException( 
+          "Source array with length %d cannot have offset of %d and process %d bytes.".formatted(source.length, off, len) );
     }   // end if
 
     if( len == 0 ){
@@ -1140,8 +1140,8 @@ public class Base64 {
       }   // end if: white space, equals sign or better
       else {
         // There's a bad input character in the Base64 stream.
-        throw new java.io.IOException( String.format(
-          "Bad Base64 input character decimal %d in array position %d", ((int)source[i])&0xFF, i ) );
+        throw new java.io.IOException( 
+            "Bad Base64 input character decimal %d in array position %d".formatted(((int) source[i]) & 0xFF, i) );
       }   // end else:
     }   // each input character
 
