@@ -193,7 +193,7 @@ public class HibernateStudentUserDetailsDaoTest extends AbstractTransactionalDbT
 
     this.userDetailsDao.save(this.defaultUserDetails);
     // flush is required to cascade the join table for some reason
-    flush();
+    this.toilet.flush();
 
     // verify data store contains saved data using direct jdbc retrieval
     // (not dao)
@@ -297,10 +297,10 @@ public class HibernateStudentUserDetailsDaoTest extends AbstractTransactionalDbT
 
     this.userDetailsDao.save(this.defaultUserDetails);
     // flush is required to cascade the join table for some reason
-    this.flush();
+    this.toilet.flush();
 
     this.userDetailsDao.delete(this.defaultUserDetails);
-    this.flush();
+    this.toilet.flush();
 
     this.verifyUserandJoinTablesAreEmpty();
 
@@ -327,7 +327,7 @@ public class HibernateStudentUserDetailsDaoTest extends AbstractTransactionalDbT
 
     this.userDetailsDao.save(this.defaultUserDetails);
     // flush is required to cascade the join table for some reason
-    this.flush();
+    this.toilet.flush();
 
     // get user details record from persistent store and confirm it is
     // complete
@@ -369,7 +369,7 @@ public class HibernateStudentUserDetailsDaoTest extends AbstractTransactionalDbT
     assertNotNull(userDetails);
     assertEquals(userDetails.getUsername(), DEFAULT_USERNAME);
 
-    Long userIdNotInDb = new Long(100);
+    Long userIdNotInDb = Long.valueOf(100);
     try {
       userDetails = (StudentUserDetails) this.userDetailsDao.getById(userIdNotInDb);
       fail("Expected ObjectNotFoundException");
